Changed locked achievements from Visibility: hidden to display: none.  Fixes large empty area at bottom of the page. Part of Pull Request #36 on main project.

--- a/style.css
+++ b/style.css
@@ -27,5 +27,5 @@ ul {
     list-style-type: none;
 }
 #locked {
-    visibility: hidden;
+    display: none;
 }
